--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
 	"scripts": {
 		"build": "rm -rf dist && tsc -p tsconfig.json",
 		"lint": "prettier --write . && tsc -p tsconfig.json",
-		"npm-publish": "yarn test --run && yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
-		"npm-publish-only": "yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
+		"npm-publish": "yarn test --run && yarn lint && yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
+		"npm-publish-only": "yarn lint && yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
 		"test": "vitest",
 		"test:coverage": "rm -rf coverage && vitest --run --coverage"
 	},
-	"version": "1.0.5"
+	"version": "1.0.7"
 }
