--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"url": "https://github.com/feliperohdee/use-iframe-tracker"
 	},
 	"scripts": {
-		"build": "rm -rf dist && tsc -p tsconfig.json",
+		"build": "rm -rf dist && yarn lint && tsc -p tsconfig.json",
 		"lint": "prettier --write . && tsc -p tsconfig.json",
 		"npm-publish": "yarn test --run && yarn lint && yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
 		"npm-publish-only": "yarn lint && yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
