--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
 	"devDependencies": {
 		"@types/lodash": "^4.17.13",
 		"@vitest/coverage-v8": "2.1.8",
+		"eslint": "^9.26.0",
 		"prettier": "^3.4.2",
 		"typescript": "^5.7.2",
+		"typescript-eslint": "^8.32.1",
 		"vitest": "^2.1.8"
 	},
 	"files": [
@@ -19,11 +21,11 @@
 	},
 	"scripts": {
 		"build": "rm -rf dist && yarn lint && tsc -p tsconfig.json",
-		"lint": "prettier --write . && tsc -p tsconfig.json",
+		"lint": "prettier --write . && eslint . && tsc -p tsconfig.json",
 		"npm-publish": "yarn test --run && yarn lint && yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
 		"npm-publish-only": "yarn lint && yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
 		"test": "vitest",
 		"test:coverage": "rm -rf coverage && vitest --run --coverage"
 	},
-	"version": "1.0.7"
+	"version": "1.0.8"
 }
